fix align

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -216,7 +216,7 @@ button#doks-versions {
 
 .doks-search::after {
   position: absolute;
-  top: 0.4625rem;
+  top: 0.60125rem;
   right: 0.5375rem;
   display: flex;
   align-items: center;
